src/assets/style/components/Carousel.module.css
:root{
    --carousel-bg-color: var(--color-bg-secondary);
    --carousel-txt-color: #fff;
    --carousel-arrow-bg-color: rgba(0 0 0 / 20%);
}

.carousel{
    width: 100%;
    height: auto;
    background: var(--carousel-bg-color);
    overflow: hidden;
    position: relative;
    border-radius: 10px;
}

.carousel::after{
    content: "";
    display: block;
    padding-bottom: 33.5%;
}

.arrows-container{
    position: absolute;
    inset: 0;
    height: 100%;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: stretch;
    z-index: 2;
    opacity: 0;
    transition: opacity .2s ease-in;
    animation: opacity-flash .8s ease-out 2;
}

.arrow{
    height: 100%;
    width: 8%;
    background: var(--carousel-arrow-bg-color) url("../../img/arrow.svg") no-repeat center center;
    background-size: 50%;
    cursor: pointer;
}

.carousel:hover .arrows-container{
    opacity: 1;
}

.arrow.previous{
    transform: rotateZ(180deg);
}

.slides-container{
    position: absolute;
    width: auto;
    height: 100%;
    display: flex;
    left: 0;
    transition: left .4s ease-in-out;
}

.slide{
    background: transparent no-repeat center center;
    background-size: cover;
    height: 100%;
}

.slide-index{
    position: absolute;
    bottom: 1rem;
    left: 1rem;
    right: 1rem;
    text-align: center;
    z-index: 4;
    color: var(--carousel-txt-color);
    font-weight: 500;
    pointer-events: none;
    text-shadow: 1px 1px 2px black;
    font-size: 1.125rem;
}

@keyframes opacity-flash {
    0%{
        opacity: 0;
    }

    50%{
        opacity: 1;
    }

    100%{
        opacity: 0;
    }
}

/* Responsive */
@media screen and (width <= 40rem)  {
    .carousel::after{
        padding-bottom: 76%;
    }

    .arrow{
        width: 15%;
    }

    .slide-index{
        display: none;
    }


}

